feat : 연동된 캘린더의 유무에 따른 분기 처리 추가 (#828)